--- a/package.json
+++ b/package.json
@@ -2,7 +2,19 @@
   "name": "personal-page",
   "version": "1.0.0",
   "description": "The Stepan Dementev's (ISE-01) Personal Page homeworks for Innopolus Front-End developement course",
-  "main": "comicScript.js",
+  "main": "comicScript.ts",
+  "scripts": {
+    "build": "rollup --config rollup.config.js"
+  },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.6",
+    "rollup": "^4.18.0",
+    "tslib": "^2.6.3",
+    "typescript": "^5.5.2"
+  },
+  "type": "module"
 }
