--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,4 +28,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: .
-          publish_branch: main  # Branch to deploy to (you can customize this)
+          publish_branch: gh-pages  # Branch to deploy to (you can customize this)
