--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,7 @@ jobs:
     permissions:
       packages: write
       pull-requests: write
+      contents: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -31,4 +32,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: .
-          publish_branch: gh-pages  # Branch to deploy to (you can customize this)
+          publish_branch: gh-pages
