--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
-  "name": "personal-page",
-  "version": "1.0.0",
-  "description": "The Stepan Dementev's (ISE-01) Personal Page homeworks for Innopolus Front-End developement course",
-  "main": "src/comicScript.ts",
-  "scripts": {
-    "build": "rollup --config rollup.config.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^11.1.6",
-    "date-fns": "^3.6.0",
-    "day": "^0.0.2",
-    "moment": "^2.30.1",
-    "relative-time": "^1.0.0",
-    "rollup": "^4.18.0",
-    "tslib": "^2.6.3",
-    "typescript": "^5.5.2"
-  },
+  "name": "personal-page-svetle",
+  "private": true,
+  "version": "0.0.0",
   "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "svelte-check --tsconfig ./tsconfig.json && tsc -p tsconfig.node.json"
+  },
+  "devDependencies": {
+    "@sveltejs/vite-plugin-svelte": "^3.1.1",
+    "@tsconfig/svelte": "^5.0.4",
+    "svelte": "^4.2.18",
+    "svelte-check": "^3.8.1",
+    "tslib": "^2.6.3",
+    "typescript": "^5.2.2",
+    "vite": "^5.3.1"
+  },
   "dependencies": {
-    "dayjs": "^1.11.11"
+    "date-fns": "^3.6.0",
+    "svelte-routing": "^2.13.0"
   }
 }
