--- a/.github/workflows/AppBuilding.yml
+++ b/.github/workflows/AppBuilding.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Build
         run: npm run build
 
+      - name: List output directory
+        run: ls -l
+
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.4
         with:
