--- a/.github/workflows/AppBuilding.yml
+++ b/.github/workflows/AppBuilding.yml
@@ -23,7 +23,7 @@ jobs:
         run: npm run build
 
       - name: List output directory
-        run: ls src
+        run: ls dist
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.4
