--- a/.github/workflows/AppBuilding.yml
+++ b/.github/workflows/AppBuilding.yml
@@ -23,6 +23,9 @@ jobs:
         run: npm run build
 
       - name: List output directory
+        run: ls .
+
+      - name: List dist directory
         run: ls dist
 
       - name: Deploy to GitHub Pages
