--- a/.github/workflows/AppBuilding.yml
+++ b/.github/workflows/AppBuilding.yml
@@ -35,3 +35,5 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@4.1.4
         with:
           folder: dist
+          branch: main
+          token: ${{ secrets.GITHUB_TOKEN }}
