--- a/.github/workflows/AppBuilding.yml
+++ b/.github/workflows/AppBuilding.yml
@@ -29,9 +29,7 @@ jobs:
         run: ls dist
 
       - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@4.1.4
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          branch: gh-pages
-          folder: dist
-          token: ${{ secrets.GITHUB_TOKEN }}
-          force: true
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
