--- a/.github/workflows/AppBuilding.yml
+++ b/.github/workflows/AppBuilding.yml
@@ -9,27 +9,28 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout Repository
+        uses: actions/checkout@v2
 
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '22.4.0'
+          node-version: '14'
 
       - name: Install Dependencies
         run: npm install
 
+      - name: Run Checks
+        run: npm run check
+
+      - name: Lint
+        run: npm run lint
+
       - name: Build
         run: npm run build
-
-      - name: List output directory
-        run: ls .
-
-      - name: List dist directory
-        run: ls dist
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+          publish_dir: ./build
