--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "sveltekit-example-app",
+    "name": "personal-page",
     "version": "0.0.1",
     "scripts": {
         "dev": "vite dev",
