Use cloudflare adapter

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "type": "module",
     "dependencies": {
+        "@sveltejs/adapter-cloudflare": "^4.6.1",
         "@sveltejs/adapter-node": "5.0.2",
         "date-fns": "^3.6.0",
         "eslint": "^9.6.0"
